# conlife

./: .gitignore  Cargo.toml  README.md
src/: grid.rs  lib.rs  main.rs  object.rs
