[package]
name = "conlife"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Backend-only implementation of Game of Life with minimal dependencies"
readme = "README.md"
repository = "https://github.com/christofferaakre/conlife"
keywords = ["life", "game-of-life", "game_of_life", "gol", "game"]
categories = ["data-structures", "simulation", "games"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
